# ooo_uno_tmpl

./: .gitignore  MANIFEST.in  None  README.md  app.py  clear_logs.sh  config.json  config.py  conftest.py  environment.yml  make.py  pyproject.toml  setup.py
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
app_cmd/: run_link_src.py  run_setup.py  run_uno_lnk.py
data_manage/: db_manager.py  json_controler.py  json_merge.py  util.py
data_manage/controller/: component_controler.py  database_controler.py  json_controler.py  module_links_controler.py  namespace_controler.py  star_ns_controller.py
data_manage/data_class/: component.py  extend.py  extends_map.py  full_import.py  module_detail.py  module_info.py  namespace_child.py  namespace_tree.py
data_manage/db_class/: base_sql.py  base_sql_table.py  db_connect.py  init_db.py  qry_component.py  qry_extends.py  qry_file.py  qry_ns_imports.py  sql_ctx.py  tbl_component.py  tbl_component_extend.py  tbl_module_detail.py  tbl_module_info.py
data_manage/parse/: parse_module_json.py  parse_module_links.py
docs/: Release_Notes.rst  area_map.txt  const notes.txt  notes.txt  readme.rst  readme.todo  readme.txt  relative imports notes.txt  setup_env.rst
lo/: module_links.json
lo/accessibility/: Accessible.json  MSAAService.json  (+42 more)
logger/: log_handle.py
ooodata/: module_links.json
parser/: __init__.py  base.py  const.py  enm.py  ex.py  linkproc.py  mod.py  mod_rel.py  mod_type.py  service.py  singleton.py  star.py  struc.py  type_mod.py  typedef.py  xparse.py  xsrc.py
resources/: class_list.txt  inc_lic.txt  mod_info.sqlite  star.json
runners/: compare.py  data_class.py  file_base.py  make.py  touch_files.py
src/: MANIFEST.in  README.rst  config.py  setup.py
star_ns/: gen_star_ns.py  write_star_ns.py
template/: _base_const.py  _base_const_dyn.py  _base_const_pyi.py  _base_enum.py  _base_enum_dyn.py  _base_enum_pyi.py  _base_ex.py  _base_ex_dyn.py  _base_ex_pyi.py  _base_interface.py  _base_interface_dyn.py  _base_interface_pyi.py  _base_json.py  _base_service.py  _base_service_dyn.py  _base_service_pyi.py  _base_singleton.py  _base_singleton_dyn.py  _base_singleton_pyi.py  _base_struct.py  _base_struct_dyn.py  _base_struct_pyi.py  _base_tmpl.py  _base_typedef.py  _base_typedef_dyn.py  _base_typedef_pyi.py  _const.py  _const.tmpl  _const_base.py  _const_base.py.bak  _const_base.tmpl  _const_dyn.py  _const_dyn.tmpl  _const_pyi.py  _const_pyi.tmpl  _enum_base.py  _enum_base.tmpl  _enum_dyn.py  _enum_dyn.tmpl  _enum_pyi.py  (+42 more)
tests/: conftest.py  import_check.py  mod_types.py  test_misc.py
uno_obj/: module_links.json
(+17609 files in other folders)
