[tool.poetry]
name = "ooo-uno-tmpl"
version = "0.1.0"
description = ""
authors = [":Barry-Thomas-Paul: Moss <vibrationoflife@protonmail.com>"]
license = "Apache Software License"
readme = "README.md"
packages = [{include = "ooo_uno_tmpl"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
Deprecated = "^1.2.13"
kwargshelper = "^2.7.1"
types-unopy = "^0.4.7"
verr = "^1.1.2"
ns-rep-imports = "^0.1.3"
black = "^22.10.0"
pydantic = "^1.10.2"
tabulate = "^0.9.0"
xerox = "^0.4.1"
requests = "^2.28.1"
numpy = "^1.23.4"
Pillow = "^9.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
