[tool.poetry]
name = "ooo-uno-tmpl"
version = "0.3.2"
description = ""
authors = [":Barry-Thomas-Paul: Moss <vibrationoflife@protonmail.com>"]
license = "Apache Software License"
readme = "README.md"
packages = [{include = "ooo_uno_tmpl"}]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
black = ">=23.3.0"
Cheetah3 = "^3.2.6.post1"
Deprecated = "^1.2.13"
kwargshelper = "^2.7.1"
lxml = "^4.9.2"
ns-rep-imports = "^0.1.3"
numpy = "^1.23.4"
Pillow = "^9.3.0"
pydantic = "^1.10.7"
python = "^3.8"
requests = "^2.30.0"
tabulate = "^0.9.0"
types-unopy = ">=1.1.0"
verr = ">=1.1.2"
xerox = "^0.4.1"
oooenv = "^0.1.1"
lo-dev-search = "^2.0.2"


[tool.poetry.group.test.dependencies]
pytest = ">=7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extended-select=["ANN", "C4", "N", "SIM", "TCH"]
ignore=["E502"]
show-fixes=true
target="py38"